CSS align completion, remove invalid marker class

--- a/src/main/resources/web/style/screen.css
+++ b/src/main/resources/web/style/screen.css
@@ -1,3 +1,12 @@
+.completion {
+    padding-top: 2px;
+}
+
+.completion input {
+    float: left;
+    width: 60%;
+}
+
 .invalidContact {
     background-color: #F2DEDE;
     color: #B94A48;
